# droidsdk

./: #1#input.txt  .dsdk.jsonc  .travis.yml  Cargo.toml  README.md  droidsdk  dsdk-init.sh  dsdk.bat  dsdk.sh  input.txt
docs/installation/: Linux.md  Windows.md  automatic.md  other-systems.md
docs/usage/: ActivityConfigurations.md  Basics.md
src/: main.rs
src/cli/: install.rs  interactive.rs  list.rs  mod.rs  remove.rs  revert.rs  root.rs  setup.rs  source.rs  use_.rs  whatis.rs
src/cli/activity/: begin.rs  mod.rs
src/engine/: filesystem.rs  mod.rs  operating_system.rs
src/engine/activity/: mod.rs
src/engine/environment_for_project/: mod.rs
src/engine/install_sdkit/: mod.rs
src/engine/setup/: mod.rs
src/engine/use_sdkit/: mod.rs
src/sdkman_api/: candidates.rs  mod.rs  versions.rs
