[package]
name = "droidsdk"
version = "0.1.0"
authors = ["Serhii Kartashov", "Bohdan Strutynskyi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.10"
seahorse = "1.0.0"
dialoguer = "0.6.2"
string-error = "0.1.0"