[package]
name = "droidsdk"
version = "0.1.0"
authors = ["Serhii Kartashov", "Bohdan Strutynskyi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
regex = "1"

seahorse = "1.0.0"
dialoguer = "0.6.2"

string-error = "0.1.0"

# .tar.gz
flate2 = "1.0.14" # outdated becauze zip depends on it - TODO check if we can bypass using zip entirely
tar = "0.4.30"
# .zip
zip = "0.5.8"

lazy_static = "1.4.0"

cfg-if = "0.1.10"

chrono = "0.4"

log = "0.4" # log API
fern = "0.5" # log implementation

size_format = "1.0.2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.1.16"

[target.'cfg(windows)'.dependencies]
winreg = "0.7.0"
